# models-loader-engine

./: .gitignore  CMakeLists.txt  main.cpp  objetivo do projeto.md
brain/: como rodar.md
include/core/: mapper.hpp  tensor.hpp  tensor_loader.cpp  timer.hpp
include/layers/: linear.hpp  transformer_block.hpp
include/model/: gguf_parser.cp  gguf_parser.cpp  gguf_parser.hpp  model_graph.hpp  model_loader.hpp  verification.hpp
src/kernels/: cpu_kernels.cpp  cpu_kernels.hpp
tests/: inspect_gguf.py  inspect_gguf2.py  inspect_gguf3.py  inspect_gguf4.py  inspect_gguf5.py
